@@ -10,8 +10,10 @@ import tomaszewskij.przedPraca.egzaminy.models.Question;
 import tomaszewskij.przedPraca.egzaminy.repositories.ExamAttemptRepository;
 
 import java.util.ArrayList;
+import java.util.Collections;
 import java.util.List;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 @Service
 public class ExamAttemptService {
@@ -39,10 +41,17 @@ public class ExamAttemptService {
 
         List<Question> questions = generateRandomQuestions(exam, howManyQuestionsShow);
 
+
+        questions.forEach(question -> {
+            Collections.shuffle(question.getAnswers());
+        });
+
+        Collections.shuffle(questions);
+
         ExamAttempts examAttempt = new ExamAttempts();
 
         List<AttemptQuestion> attemptQuestions = new ArrayList<>();
-        questions.forEach(question->{
+        questions.forEach(question -> {
             attemptQuestions.add(new AttemptQuestion(examAttempt, question));
         });
 
@@ -64,9 +73,10 @@ public class ExamAttemptService {
             Random r = new Random();
             returnQuestions = r.ints(0, exam.getQuestions().size())
                     .mapToObj(rand -> exam.getQuestions().get(rand))
+                    .filter(e -> !e.isHidden())
                     .distinct()
                     .limit(howManyQuestions)
-                    .toList();
+                    .collect(Collectors.toList());
         }
         return returnQuestions;
     }
